ZFIN-9081: Convert PublicationTrackingHistory events to generic update events